--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 body{
     background-color: rgb(0, 0, 0);
     text-align: center;
-    font-family: sans-serif;
+    font-family: 'Sono', sans-serif;
 }
 
 .hello{
     color: white;
-    font-size: xx-large;
-
+    font-size: 26;
+    font-weight: 700;
 }
 
 a{
